Rewrite the plugin using standard `javax.tools` API instead of Plexus. Tests are temporarily commented-out except the most basic ones, in order to focus on the easiest tests.